base api (only data without image)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="main_bnv_profile">Профиль</string>
 
 
+<!--    <string name="fragment_menu_item_format_sign_weight">%d г.</string>-->
+<!--    <string name="fragment_menu_item_format_sign_price">%dР</string>-->
 
 
 
