--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,20 @@
     <string name="main_bnv_profile">Профиль</string>
 
 
-<!--    <string name="fragment_menu_item_format_sign_weight">%d г.</string>-->
-<!--    <string name="fragment_menu_item_format_sign_price">%dР</string>-->
+
+
+    <string name="fragment_profile_section_orders">Заказы</string>
+    <string name="fragment_profile_section_info">Личное</string>
+    <string name="fragment_profile_section_addresses">Адреса</string>
 
 
 
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment_profile_section_info_name_title">Имя</string>
+    <string name="fragment_profile_section_info_name_hint">Тест</string>
+    <string name="fragment_profile_section_info_phone_title">Номер телефона</string>
+    <string name="fragment_profile_section_info_phone_hint">88005553535</string>
+    <string name="fragment_profile_section_info_email_title">Email</string>
+    <string name="fragment_profile_section_info_email_hint">test@test.test</string>
 
 
 </resources>
